<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:showDividers="end">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tripDuration"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/trip_duration"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />


        <TextView
            android:id="@+id/tripPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tripDuration"
            android:layout_alignTop="@id/tripDuration"
            android:layout_alignBottom="@id/tripDuration"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_toEndOf="@id/tripDuration"
            android:gravity="center"
            android:text="@string/trip_price"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/addressEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/entranceEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/entrance"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            tools:ignore="Autofill" />
    </LinearLayout>

    <fragment
        android:id="@+id/destinationEdit"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:hint="@string/destination"
        android:inputType="text"
        tools:ignore="Autofill" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/wishesButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/wishes" />

        <Spinner
            android:id="@+id/payTypeSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:entries="@array/pay_type" />

    </LinearLayout>

    <Button
        android:id="@+id/makeOrderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="8dp"
        android:background="#FFEB3B"
        android:text="@string/make_order" />

</LinearLayout>