<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".SignUpActivity">

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="14dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.rilixtech.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/phoneEdit"
                android:layout_alignBottom="@id/phoneEdit"
                android:layout_marginStart="20dp"
                android:gravity="center"
                app:ccp_customMasterCountries="RU"
                app:ccp_defaultNameCode="RU"
                app:ccp_hideNameCode="true" />

            <EditText
                android:id="@+id/phoneEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="14dp"
                android:layout_toEndOf="@id/countryCodePicker"
                android:digits="1234567890"
                android:ems="10"
                android:hint="@string/phone_number_without_7"
                android:inputType="phone"
                android:maxLength="10"
                tools:ignore="Autofill" />
        </RelativeLayout>

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="14dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="128"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="4dp"
            android:autofillHints="@string/email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:targetApi="O" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:text="@string/email_hint" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:onClick="register"
            android:text="@string/register" />


        <TextView
            android:id="@+id/agree_terms_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:ellipsize="none"
            android:focusable="true"
            android:linksClickable="true"
            android:maxLines="100"
            android:scrollHorizontally="false"
            android:text="@string/agree_terms_privacy"
            android:textAlignment="center"
            android:textColorLink="@color/colorPrimary" />


        <TextView
            android:id="@+id/redirectToLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom"
            android:linksClickable="true"
            android:onClick="changeForm"
            android:text="@string/for_registered_users"
            android:textColorLink="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>
